<resources>
    <string name="app_name">Football App</string>
    <string name="fouls">Fouls</string>
    <string name="yellow_cards">Yellow Cards</string>
    <string name="red_cards">Red Cards</string>
    <string name="goal_button">Goal</string>
    <string name="foul_button">Foul</string>
    <string name="yellow_button">Yellow Card</string>
    <string name="red_button">Red Card</string>
    <string name="result">0 - 0</string>
    <string name="reset_button">Reset</string>
</resources>
